[gd_scene load_steps=7 format=3 uid="uid://xysnoajbdhqy"]

[ext_resource type="Script" path="res://addons/panda_time/resources/window_reminder.gd" id="1_xiyf8"]
[ext_resource type="Texture2D" uid="uid://dx22g4cm3pl2e" path="res://addons/panda_time/resources/images/logout.png" id="2_iudtu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h12ek"]

[sub_resource type="Animation" id="Animation_h4dxb"]
resource_name = "slide_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.025, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 2,
"values": [-410, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_384t0"]
resource_name = "slide_out"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 2,
"values": [20, -410]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_urum1"]
_data = {
"slide_in": SubResource("Animation_h4dxb"),
"slide_out": SubResource("Animation_384t0")
}

[node name="WindowReminder" type="Window"]
title = "PandaTimeReminder"
position = Vector2i(-410, 36)
size = Vector2i(350, 150)
visible = false
unresizable = true
borderless = true
always_on_top = true
transparent = true
script = ExtResource("1_xiyf8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.176471, 0.258824, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 17
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DismissButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dismiss Incoming Break"

[node name="SnoozeButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Snooze"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SnoozeHSlider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 6
min_value = 30.0
max_value = 300.0
step = 30.0
value = 30.0

[node name="SnoozeLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "05:00"

[node name="MarginContainerCollapse" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 35.0
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainerCollapse"]
layout_mode = 2
color = Color(0.294118, 0.25098, 0.337255, 0.45098)

[node name="QuitButton" type="TextureButton" parent="Control/MarginContainerCollapse"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_iudtu")
texture_pressed = ExtResource("2_iudtu")
texture_hover = ExtResource("2_iudtu")
texture_disabled = ExtResource("2_iudtu")
texture_focused = ExtResource("2_iudtu")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="ColorPickerButton" type="ColorPickerButton" parent="Control"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_h12ek")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_urum1")
}
speed_scale = 2.0

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/DismissButton" to="." method="_on_dismiss_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/SnoozeButton" to="." method="_on_snooze_button_pressed"]
[connection signal="drag_ended" from="Control/MarginContainer/VBoxContainer/HBoxContainer/SnoozeHSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="Control/MarginContainer/VBoxContainer/HBoxContainer/SnoozeHSlider" to="." method="_on_h_slider_drag_started"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/SnoozeHSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Control/MarginContainerCollapse/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="picker_created" from="Control/ColorPickerButton" to="." method="_on_color_picker_button_picker_created"]
[connection signal="popup_closed" from="Control/ColorPickerButton" to="." method="_on_color_picker_button_popup_closed"]
